# setsearch

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  deploy.sh  env.py  manage.py  populate.py  population_script.py  pyproject.toml  readme.md  requirements.txt  run_tests.py
assets/css/: artist.css  concert.css  custom.css  search.css
assets/js/: artist.js  attendance.esm.js  comments.esm.js  concert.esm.js  concert.js  create-select2.js  editConcert.js  home.esm.js  home.js  linkUser.js  profile.esm.js  profile.js  setlist.js  updateConcert.js
data/: artists.ndjson  artists.ndjson.zst  concerts.ndjson.zst  setlist.ndjson.zst  venues.ndjson.zst
data/wrangler/: artists.py  cover_art.py  events.py  main.py  songs.py  util.py
scripts/: env.py  populate.py  requirements.py  wrangle.py
setsearch/: admin.py  apps.py  asgi.py  decorators.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
setsearch/forms/: __init__.py  api.py  artist.py  auth.py  concert.py
setsearch/migrations/: 0001_initial.py  0002_alter_artist_mbid_alter_song_mbid_alter_venue_mbid_and_more.py  0002_alter_attendance_rating.py  0002_artist_slug.py  0002_comment.py  0002_concert_slug_alter_concert_title.py  0003_remove_concert_date_concert_day_concert_month_and_more.py
setsearch/models/: __init__.py  artist.py  attendance.py  comment.py  concert.py  setlist.py  song.py  util.py  venue.py
setsearch/old-templates/: artist.html  concert.html  signup.html
setsearch/templates/: _auth.html  _base.html  _select2.html  artist.html  concert.html  create_concert.html  edit_concert.html  hello.html  home.html  login.html  profile.html  signup.html  upcoming.html
wad/: asgi.py  settings.py  urls.py  wsgi.py
(+20 files in other folders)
