[project]
name = "wad-project"
version = "0.0.0"
readme = "readme.md"
requires-python = "==3.13.12"
dependencies = [
    "django==6.0.3",
    "django-google-fonts==0.0.3",
    "orjson==3.11.7",
    "python-dotenv==1.2.2",
    "zstandard==0.25.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
]
data = [
    "kagglehub==1.0.0",
    "pandas==3.0.1",
    "requests==2.32.5",
]
