[project]
name = "wad-project"
version = "0.0.0"
readme = "readme.md"
requires-python = "==3.13.12"
dependencies = [
    "django==6.0.3",
    "django-bootstrap5==26.2",
    "django-compressor==4.6.0",
    "django-htmlmin==0.11.0",
    "django-select2==8.4.8",
    "django-unfold==0.86.1",
    "orjson==3.11.7",
    "python-dotenv==1.2.2",
    "zstandard==0.25.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pytest==8.3.2",
    "pytest-django==4.8.0",
]
data = [
    "kagglehub==1.0.0",
    "pandas==3.0.1",
    "requests==2.32.5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "wad.settings"
python_files = ["test_*.py"]
python_classes = ["*Test"]
python_functions = ["test_*"]
